--- a/ViagemImpacta/backend/ViagemImpacta/Views/Employees/Edit.cshtml
+++ b/ViagemImpacta/backend/ViagemImpacta/Views/Employees/Edit.cshtml
@@ -54,14 +54,14 @@
             <label asp-for="Cpf" class="form-label d-flex gap-1">
                 <span class="material-symbols-outlined align-middle" title="CPF">id_card</span> CPF
             </label>
-            <input asp-for="Cpf" class="form-control" readonly />
+            <input asp-for="Cpf" class="form-control" />
             <span asp-validation-for="Cpf" class="text-danger"></span>
         </div>
         <div class="col-md-6 mb-3">
             <label asp-for="BirthDate" class="form-label d-flex gap-1">
                 <span class="material-icons align-middle" title="Data de Nascimento">cake</span> Data de Nascimento
             </label>
-            <input asp-for="BirthDate" class="form-control" readonly />
+            <input asp-for="BirthDate" class="form-control" />
             <span asp-validation-for="BirthDate" class="text-danger"></span>
         </div>
     </div>
