--- a/ViagemImpacta/backend/ViagemImpacta/Views/Users/Index.cshtml
+++ b/ViagemImpacta/backend/ViagemImpacta/Views/Users/Index.cshtml
@@ -54,7 +54,7 @@
                     <td>
                         <a class="btn btn-sm btn-info" asp-action="Details" asp-route-id="@user.UserId">Detalhar</a>
                         <a class="btn btn-sm btn-warning" asp-action="Edit" asp-route-id="@user.UserId">Editar</a>
-                        <a class="btn btn-sm btn-success" asp-action="Reviews" asp-route-id="@user.UserId">Avaliações</a>
+                        <a class="btn btn-sm btn-success" asp-action="ReviewsByUser" asp-controller="Reviews" asp-route-id="@user.UserId">Avaliações</a>
                         <a class="btn btn-sm btn-primary" asp-action="ReservationsByUser" asp-controller="Reservations" asp-route-id="@user.UserId">Reservas</a>
                         <a asp-action="Delete" asp-route-id="@user.UserId" class="btn btn-sm btn-danger">Deletar</a>
                     </td>
